# Talk_to_your_data

./: pyproject.toml
td/: app.py  langchain_unify.py
tests/: llamaindex_test.ipynb  testing.ipynb
