[tool.poetry]
name = "td"
version = "0.1.0"
description = ""
authors = ["abhi2596 <abhijeetchintakunta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
langchain = "^0.1.17"
langchain-experimental = "^0.0.57"
ipykernel = "^6.29.4"
httpx = "^0.27.0"
pandas = "^2.2.2"
tabulate = "^0.9.0"
llama-index = "^0.10.34"
llama-index-experimental = "^0.1.3"
llama-index-llms-openai-like = "^0.1.3"
streamlit = "^1.34.0"
unifyai = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
